--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,20 @@
 = koala-rails
 
-Installer and helpers for using Koala with Rails 3
+Installer and helpers for using {Koala}[http://github.com/arsduo/koala] with {Rails 3}[http;//github.com/rails/rails]
+
+== Installation
+
+In your Gemfile
+  gem "koala-rails"
+
+From the command line
+  bundle install
+  rails g koala:install
+
+Edit config/facebook.yml to reflect your Facebook application's ID and secret.
+
+== Using the Helpers
+(Coming soon)
 
 == Note on Patches/Pull Requests
 
