Trying to fix minor dependency problem.. for now, follow instructions in README.rdoc

--- a/README.rdoc
+++ b/README.rdoc
@@ -5,6 +5,7 @@ Installer and helpers for using {Koala}[http://github.com/arsduo/koala] with {Ra
 == Installation
 
 In your Gemfile
+  gem "koala"
   gem "koala-rails"
 
 From the command line
